--- a/education.html
+++ b/education.html
@@ -155,7 +155,7 @@
           From beginner-friendly workshops that require no coding to in-depth courses in machine learning and data science, we have a program for you. Find the perfect path to start or advance your journey in AI.
         </p>
         <div class="cta">
-          <button>Explore WabTech Academy Programs</button>
+          <a href="academy.html" class="btn">Explore WabTech Academy Programs</a>
         </div>
       </div>
     </div>
