--- a/education.html
+++ b/education.html
@@ -1,41 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>WAB TECH AI</title>
+  <meta charset="UTF-8">
+  <title>WabTech AI</title>
   <style>
-    /* Base Styles */
     body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
-      background-color: #0d0d0d;
-      color: #f5f5f5;
+      background-color: #000;
+      color: #ffd700;
     }
 
-    /* Container */
-    .container {
-      max-width: 1200px;
-      margin: auto;
-      padding: 60px 20px;
+    /* 🔱 Metallic Gold Navigation Bar */
+    nav {
+      background: linear-gradient(90deg, #d4af37, #ffd700);
+      display: flex;
+      justify-content: center;
+      padding: 15px 0;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.3);
     }
 
-    /* Hero Layout */
-    .hero-layout {
+    nav a {
+      color: #000;
+      text-decoration: none;
+      font-weight: bold;
+      margin: 0 20px;
+      font-size: 16px;
+      transition: color 0.3s ease;
+    }
+
+    nav a:hover {
+      color: #fff;
+    }
+
+    /* 🧠 Hero Section with Image Right, Text Left */
+    .hero {
       display: flex;
       flex-wrap: wrap;
       align-items: center;
-      gap: 40px;
+      justify-content: center;
+      padding: 40px 20px;
     }
 
     .hero-text {
       flex: 1;
-      min-width: 300px;
+      min-width: 280px;
+      padding: 20px;
+    }
+
+    .hero-text h1 {
+      font-size: 32px;
+      margin-bottom: 10px;
+    }
+
+    .hero-text p {
+      font-size: 18px;
+      margin-bottom: 20px;
     }
 
     .hero-image {
       flex: 1;
-      min-width: 300px;
+      min-width: 280px;
+      padding: 20px;
       text-align: center;
     }
 
@@ -43,122 +69,48 @@
       max-width: 100%;
       height: auto;
       border-radius: 10px;
-      box-shadow: 0 0 20px #ffd700;
+      box-shadow: 0 4px 8px rgba(255, 215, 0, 0.3);
     }
 
-    /* Headings and Tagline */
-    h1 {
-      font-size: 48px;
-      font-weight: bold;
-      color: #ffd700;
-      margin-bottom: 10px;
-    }
-
-    .tagline {
-      font-size: 20px;
-      color: #ccc;
-      margin-bottom: 40px;
-    }
-
-    .intro h2 {
-      font-size: 32px;
-      color: #ffd700;
-      margin-bottom: 10px;
-    }
-
-    .intro p {
-      font-size: 18px;
-      color: #eee;
-      margin-bottom: 40px;
-    }
-
-    /* Info Section */
-    .info-section {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 40px;
-    }
-
-    .column {
-      flex: 1;
-      min-width: 300px;
-      background-color: #1a1a1a;
-      padding: 20px;
-      border-radius: 8px;
-    }
-
-    .column h3 {
-      font-size: 24px;
-      color: #ffd700;
-      margin-bottom: 15px;
-    }
-
-    .column p {
-      font-size: 16px;
-      color: #ddd;
-      line-height: 1.6;
-    }
-
-    /* CTA Button */
-    .cta {
-      margin-top: 20px;
-    }
-
-    .cta button {
+    /* 🎯 CTA Button */
+    .cta-button {
       background-color: #ffd700;
       color: #000;
-      border: none;
       padding: 12px 24px;
       font-size: 16px;
       font-weight: bold;
-      border-radius: 5px;
-      cursor: pointer;
+      border: none;
+      border-radius: 6px;
+      text-decoration: none;
       transition: background-color 0.3s ease;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.2);
     }
 
-    .cta button:hover {
+    .cta-button:hover {
       background-color: #e6c200;
+      color: #fff;
     }
   </style>
 </head>
 <body>
-  <section class="hero">
-    <div class="container hero-layout">
-      <!-- Left Text Content -->
-      <div class="hero-text">
-        <h1>WAB TECH AI</h1>
-        <p class="tagline">Empowering through AI</p>
 
-        <div class="intro">
-          <h2>Artificial Intelligence for Everyone</h2>
-          <p>Empowering coders and non-coders alike to innovate with AI.</p>
-        </div>
-      </div>
+  <!-- 🔱 Navigation Bar -->
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="academy.html">Academy</a>
+  </nav>
 
-      <!-- Right Image -->
-      <div class="hero-image">
-        <img src="ai-head.png" alt="AI Head Illustration" />
-      </div>
+  <!-- 🧠 Hero Section -->
+  <div class="hero">
+    <div class="hero-text">
+      <h1>WAB TECH AI</h1>
+      <p>Empowering through AI. Democratizing skills across Africa — from students to farmers, professionals to entrepreneurs.</p>
+      <a href="academy.html" class="cta-button">Explore WabTech Academy</a>
     </div>
-
-    <!-- Info Section -->
-    <div class="container info-section">
-      <div class="column">
-        <h3>Our AI Training Mission</h3>
-        <p>
-          We are democratizing AI skills across Africa. Our training programs are designed to be accessible to everyone, from curious students and farmers to seasoned professionals and entrepreneurs. We believe that with the right knowledge, anyone can leverage AI to solve problems and create opportunities.
-        </p>
-      </div>
-      <div class="column">
-        <h3>Discover Our Pathways</h3>
-        <p>
-          From beginner-friendly workshops that require no coding to in-depth courses in machine learning and data science, we have a program for you. Find the perfect path to start or advance your journey in AI.
-        </p>
-        <div class="cta">
-          <a href="academy.html" class="btn">Explore WabTech Academy Programs</a>
-        </div>
-      </div>
+    <div class="hero-image">
+      <img src="ai-head.jpg" alt="AI Head Illustration">
     </div>
-  </section>
+  </div>
+
 </body>
 </html>
