--- a/education.html
+++ b/education.html
@@ -11,7 +11,7 @@
       color: #ffd700;
     }
 
-    /* 🔱 Metallic Gold Navigation Bar */
+    /* 🔱 Navigation Bar */
     nav {
       background: linear-gradient(90deg, #d4af37, #ffd700);
       display: flex;
@@ -33,47 +33,80 @@
       color: #fff;
     }
 
-    /* 🧠 Hero Section with Image Right, Text Left */
+    /* 🧠 Hero Section */
     .hero {
       display: flex;
-      flex-wrap: wrap;
+      justify-content: space-between;
       align-items: center;
-      justify-content: center;
-      padding: 40px 20px;
+      padding: 60px 40px;
+      flex-wrap: wrap;
     }
 
     .hero-text {
       flex: 1;
-      min-width: 280px;
-      padding: 20px;
+      min-width: 300px;
+      padding-right: 20px;
     }
 
     .hero-text h1 {
-      font-size: 32px;
-      margin-bottom: 10px;
+      font-size: 40px;
+      margin-bottom: 20px;
+      color: #ffd700;
     }
 
     .hero-text p {
       font-size: 18px;
-      margin-bottom: 20px;
+      color: #fff;
+      line-height: 1.6;
     }
 
     .hero-image {
       flex: 1;
-      min-width: 280px;
-      padding: 20px;
+      min-width: 300px;
       text-align: center;
     }
 
     .hero-image img {
       max-width: 100%;
       height: auto;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(255, 215, 0, 0.4);
+    }
+
+    /* 📦 Two Content Bars */
+    .info-section {
+      display: flex;
+      justify-content: space-between;
+      gap: 40px;
+      padding: 40px;
+      flex-wrap: wrap;
+    }
+
+    .info-box {
+      flex: 1;
+      min-width: 300px;
+      background-color: #1a1a1a;
+      border: 2px solid #ffd700;
       border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(255, 215, 0, 0.3);
+      padding: 30px;
+      color: #fff;
+    }
+
+    .info-box h2 {
+      color: #ffd700;
+      font-size: 22px;
+      margin-bottom: 15px;
+    }
+
+    .info-box p {
+      font-size: 16px;
+      line-height: 1.6;
     }
 
     /* 🎯 CTA Button */
     .cta-button {
+      display: inline-block;
+      margin-top: 20px;
       background-color: #ffd700;
       color: #000;
       padding: 12px 24px;
@@ -105,10 +138,23 @@
     <div class="hero-text">
       <h1>WAB TECH AI</h1>
       <p>Empowering through AI. Democratizing skills across Africa — from students to farmers, professionals to entrepreneurs.</p>
-      <a href="academy.html" class="cta-button">Explore WabTech Academy</a>
     </div>
     <div class="hero-image">
+      <!-- 🖼️ Upload your image and replace 'ai-head.jpg' -->
       <img src="ai-head.jpg" alt="AI Head Illustration">
+    </div>
+  </div>
+
+  <!-- 📦 Two Content Bars -->
+  <div class="info-section">
+    <div class="info-box">
+      <h2>Our AI Training Mission</h2>
+      <p>We are democratizing AI skills across Africa. Our training programs are designed to be accessible to everyone, from curious students and farmers to seasoned professionals and entrepreneurs. We believe that with the right knowledge, anyone can leverage AI to solve problems and create opportunities.</p>
+    </div>
+    <div class="info-box">
+      <h2>Discover Our Pathways</h2>
+      <p>From beginner-friendly workshops that require no coding to in-depth courses in machine learning and data science, we have a program for you. Find the perfect path to start or advance your journey in AI.</p>
+      <a href="academy.html" class="cta-button">Explore WabTech Academy Programs</a>
     </div>
   </div>
 
