--- a/education.html
+++ b/education.html
@@ -141,7 +141,7 @@
     </div>
     <div class="hero-image">
       <!-- 🖼️ Upload your image and replace 'ai-head.jpg' -->
-      <img src="ai-head.jpg" alt="AI Head Illustration">
+      <img src='ai-head.jpg' alt="AI Head Illustration">
     </div>
   </div>
 
